added route for displaying sorted ko
