# server/common/api.yml
@@ -97,6 +97,28 @@ paths:
           description: Returns all examples
           content: {}
 
+  /kos/sorted:
+    get:
+      tags:
+      - Examples
+      description: Fetch all examples
+      parameters:
+        - name: emailId
+          in: query
+          description: The id of the example to retrieve
+          required: true
+          schema:
+            type: string
+        - name: sortBy
+          in: query
+          description: Criteria to sort by
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
 
 
   /kos:
